--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vue/cli-service": "^5.0.8",
+    "primeicons": "^7.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
