--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/cli-service": "^5.0.8",
+    "@fawmi/vue-google-maps": "^0.9.79",
+    "@vue/cli-service": "^3.3.1",
     "primeicons": "^7.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
@@ -17,7 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "vite": "^6.0.1",
+    "vite": "^6.0.3",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
 }
