--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
     "@vue/cli-service": "^3.3.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "primeicons": "^7.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
