--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
+    "@popperjs/core": "^2.11.8",
     "@vue/cli-service": "^3.3.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "primeicons": "^7.0.0",
+    "sass": "^1.85.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
