--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -19,4 +19,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./
-          server-dir: public_html/345restocafe.com
+          server-dir: public_html/345restocafe.com/
