--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -18,5 +18,6 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
+          protocol: ftps
           local-dir: ./
           server-dir: public_html/345restocafe.com/
