--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -19,5 +19,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          local-dir: ./
-          server-dir: public_html/345restocafe.com/
+          port: 52525
+          local-dir: dist/
+          server-dir: /public_html/345restocafe.com/
