--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Delete old assets and index.html
+        run: |
+          curl -k --user "${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}" \
+          --ftp-ssl --ftp-method singlecwd \
+          ftp://${{ secrets.FTP_HOST }}/public_html/345restocafe.com/assets -Q "-R"
+
+          curl -k --user "${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}" \
+          --ftp-ssl --ftp-method singlecwd \
+          ftp://${{ secrets.FTP_HOST }}/public_html/345restocafe.com/index.html -Q "-DELE"
+
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
