--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -16,11 +16,11 @@ jobs:
         run: |
           curl -k --user "${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}" \
           --ftp-ssl --ftp-method singlecwd \
-          ftp://${{ secrets.FTP_HOST }}/public_html/345restocafe.com/assets -Q "-R"
+          ftp://${{ secrets.FTP_HOST }}:52525/public_html/345restocafe.com/assets -Q "-R"
 
           curl -k --user "${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}" \
           --ftp-ssl --ftp-method singlecwd \
-          ftp://${{ secrets.FTP_HOST }}/public_html/345restocafe.com/index.html -Q "-DELE"
+          ftp://${{ secrets.FTP_HOST }}:52525/public_html/345restocafe.com/index.html -Q "-DELE"
 
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
