--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
     "@popperjs/core": "^2.11.8",
+    "@primeuix/themes": "^1.2.5",
     "@vue/cli-service": "^3.3.1",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "primeicons": "^7.0.0",
-    "primevue": "^4.2.5",
+    "primevue": "^4.4.1",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
